WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286590
REGRESSION (
285996@main
): Readjusting the text selection boundaries moves the highlighted text box on Scribd.com
https://bugs.webkit.org/show_bug.cgi?id=286590
Summary
REGRESSION (285996@main): Readjusting the text selection boundaries moves the...
Ryosuke Niwa
Reported
2025-01-27 14:10:07 PST
Reproduction steps: 1. Open Safari and navigate to scribd.com 2. Log in to scribd.com account 3. Open a pdf (I used
https://www.scribd.com/document/793537768/University-Physics-With-Modern-Physics-15th-Edition-textbook
) 4. Highlight a text 5. Move the text selection box 6. Observe the whole selection box moves to new line
rdar://142911382
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2025-01-27 14:45:15 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39604
EWS
Comment 2
2025-01-28 20:29:58 PST
Committed
289483@main
(668204deb7e9): <
https://commits.webkit.org/289483@main
> Reviewed commits have been landed. Closing PR #39604 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug