REGRESSION (285996@main): Readjusting the text selection boundaries moves the highlighted text box on Scribd.com https://bugs.webkit.org/show_bug.cgi?id=286590

Reviewed by Megan Gardner and Wenson Hsieh.

Add a quirk for scribd.com to preserve the behavior prior to 285996@main.

The crux of this issue is that the selection extent momentarily moves to the beginning of the document when the user
extends the selection downwards. This causes website's code to reverse selection base and extent to kick in.
The same bug exists in macOS Safari as well as Firefox when extending upwards / backwards.

* Source/WebCore/editing/FrameSelection.cpp:
(WebCore::FrameSelection::setSelectionWithoutUpdatingAppearance):
(WebCore::FrameSelection::updateOrDisassociateLiveRange):
* Source/WebCore/editing/FrameSelection.h:
* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::shouldReuseLiveRangeForSelectionUpdate const):
* Source/WebCore/page/Quirks.h:
* Source/WebCore/page/QuirksData.h:

Canonical link: https://commits.webkit.org/289483@main